plugins {
	id "java"
	id "idea"
	id "application"
	id "jacoco"
	id "org.danilopianini.git-sensitive-semantic-versioning-gradle-plugin" version "0.3.24"
	id "io.freefair.lombok" version "6.6"
	id "com.diffplug.spotless" version "6.12.0"
}

group "com.autonomouslogic.everef"

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

ext {
	mainClassName = "com.autonomouslogic.everef.Main"
}

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
	implementation "com.google.dagger:dagger:2.14.1"
	implementation "com.google.guava:guava:31.1-jre"
	implementation "org.apache.logging.log4j:log4j-api:2.20.0"
	implementation "org.apache.logging.log4j:log4j-core:2.20.0"
	implementation "org.apache.logging.log4j:log4j-layout-template-json:2.20.0"
	implementation "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0"
	implementation "io.reactivex.rxjava3:rxjava:3.1.4"
	implementation "com.autonomouslogic.commons:commons-java:1.6.1"
	implementation "de.neuland-bfi:pug4j:2.0.6"
	implementation "software.amazon.awssdk:s3:2.20.17"
	implementation "com.fasterxml.jackson.core:jackson-annotations:2.13.4"
	implementation "com.fasterxml.jackson.core:jackson-core:2.13.4"
	implementation "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4"
	implementation "org.apache.commons:commons-pool2:2.4.2"
	implementation "org.apache.commons:commons-compress:1.21"

	testAnnotationProcessor "com.google.dagger:dagger-compiler:2.14.1"
	testImplementation "com.google.dagger:dagger:2.14.1"
	testImplementation "org.junit.jupiter:junit-jupiter:5.9.1"
	testImplementation "org.junit.jupiter:junit-jupiter-params:5.9.1"
	testImplementation "org.junit-pioneer:junit-pioneer:2.0.0"
	testImplementation "org.mockito:mockito-junit-jupiter:5.0.0"
}

java {
	withJavadocJar()
	withSourcesJar()
}

test {
	useJUnitPlatform()

	testLogging {
		events = [ "FAILED", "PASSED", "SKIPPED" ]
		showExceptions = true
		exceptionFormat = "FULL"
		showExceptions = true
		showCauses = true
		showStackTraces = true
	}

	environment "LOG_LEVEL", "debug"
}

jacocoTestReport {
	executionData(test)
	reports {
		xml.enabled true
		html.enabled true
	}
}

spotless {
	java {
		target "src/**/*.java"
		palantirJavaFormat()
		indentWithTabs()
	}

	groovyGradle {
		indentWithTabs()
	}
}

application {
	mainClass = mainClassName
}

task placeholder(type: JavaExec) {
	group "application"
	args "placeholder"

	classpath = sourceSets.main.runtimeClasspath
	mainClass = mainClassName
}

task dataIndex(type: JavaExec) {
	group "application"
	args "data-index"

	classpath = sourceSets.main.runtimeClasspath
	mainClass = mainClassName
}
